--- a/app/ngcWysiwyg/components/ngcWysiwygEditableContainer/ngcWysiwygEditableContainer.pug
+++ b/app/ngcWysiwyg/components/ngcWysiwygEditableContainer/ngcWysiwygEditableContainer.pug
@@ -1,2 +1,1 @@
-div.content-editable.md-padding(contenteditable='true', ng-bind-html='vm.value')
-md-button(ng-click='vm.teste()') testeedit
+div.content-editable.md-padding(contenteditable='true', ngc-wysiwyg-editable)
