--- a/app/ngcWysiwyg/components/ngcWysiwygTextMenu/ngcWysiwygTextMenu.pug
+++ b/app/ngcWysiwyg/components/ngcWysiwygTextMenu/ngcWysiwygTextMenu.pug
@@ -1,7 +1,7 @@
 //- ngc-wysiwyg-botao(ng-repeat='botao in vm.botoes', callback='botao.callback', icone="{{::botao.icone}}", titulo="{{::botao.titulo}}")
-ngc-wysiwyg-botao(classe='menu-item' callback='vm.setBold', icone="format_bold", titulo="Negrito", active='vm.isCursorText("bold")')
-ngc-wysiwyg-botao(classe='menu-item' callback='vm.setItalic', icone="format_italic", titulo="Itálico", active='vm.isCursorText("italic")')
-ngc-wysiwyg-botao(classe='menu-item' callback='vm.setStrikeThrough', icone="format_strikethrough", titulo="Riscado", active='vm.isCursorText("strikeThrough")')
-ngc-wysiwyg-botao(classe='menu-item' callback='vm.setUnderLine', icone="format_underlined", titulo="Sublinhado", active='vm.isCursorText("underline")')
+ngc-wysiwyg-botao(classe='menu-item' callback='vm.setBold', icone="format_bold", titulo="Negrito", active='vm.isCursorText("bold")', disabled='!vm.isSelectionInsideContent()')
+ngc-wysiwyg-botao(classe='menu-item' callback='vm.setItalic', icone="format_italic", titulo="Itálico", active='vm.isCursorText("italic")', disabled='!vm.isSelectionInsideContent()')
+ngc-wysiwyg-botao(classe='menu-item' callback='vm.setStrikeThrough', icone="format_strikethrough", titulo="Riscado", active='vm.isCursorText("strikeThrough")', disabled='!vm.isSelectionInsideContent()')
+ngc-wysiwyg-botao(classe='menu-item' callback='vm.setUnderLine', icone="format_underlined", titulo="Sublinhado", active='vm.isCursorText("underline")', disabled='!vm.isSelectionInsideContent()')
 ngc-wysiwyg-menu(titulo='{{::vm.menuFontSize.titulo}}', icone='{{::vm.menuFontSize.icone}}', botoes='::vm.menuFontSize.botoes')
 ngc-wysiwyg-menu(titulo='{{::vm.menuFontFamilty.titulo}}', icone='{{::vm.menuFontFamilty.icone}}', botoes='::vm.menuFontFamilty.botoes')
