--- a/app/ngcWysiwyg/components/ngcWysiwyg/ngcWysiwyg.pug
+++ b/app/ngcWysiwyg/components/ngcWysiwyg/ngcWysiwyg.pug
@@ -14,8 +14,8 @@ div.container(md-whiteframe='1')
     ngc-wysiwyg-editable-container
     //- left  == img.offsetLeft + (img.offsetWidth / 2) - (menu.offsetWidth/2)
     //- top  == img.offsetTop + (img.offsetHeight) + 8
-    ngc-wysiwyg-floating-menu(ng-class='{"hidden" : !vm.itemSelecionado}' ng-style='{top: vm.itemSelecionado.offsetTop + (vm.itemSelecionado.offsetHeight) + 8 , left: vm.itemSelecionado.offsetLeft + (vm.itemSelecionado.offsetWidth / 2) - (vm.floatingMenuCtrl.botoes.length * 30 / 2)}')
-    ngc-wysiwyg-image-resizer(ng-class='{"hidden" : !vm.imagemSelecionada}' ng-style='{top: vm.itemSelecionado.offsetTop, left: vm.itemSelecionado.offsetLeft, height: vm.itemSelecionado.offsetHeight, width: vm.itemSelecionado.offsetWidth}')
+    ngc-wysiwyg-floating-menu(ng-class='{"hidden" : !vm.itemSelecionado[0]}' ng-style='{top: vm.itemSelecionado[0].offsetTop + (vm.itemSelecionado[0].offsetHeight) + 8 , left: vm.itemSelecionado[0].offsetLeft + (vm.itemSelecionado[0].offsetWidth / 2) - (vm.floatingMenuCtrl.botoes.length * 30 / 2)}')
+    ngc-wysiwyg-image-resizer(ng-class='{"hidden" : !vm.imagemSelecionada}' ng-style='{top: vm.itemSelecionado[0].offsetTop, left: vm.itemSelecionado[0].offsetLeft, height: vm.itemSelecionado[0].offsetHeight, width: vm.itemSelecionado[0].offsetWidth}')
   md-button(ng-click='vm.teste()') teste
-  pre {{{top: vm.itemSelecionado.offsetTop, left: vm.itemSelecionado.offsetLeft, height: vm.itemSelecionado.offsetHeight, width: vm.itemSelecionado.offsetWidth} |json}}
+  pre {{{top: vm.itemSelecionado[0].offsetTop, left: vm.itemSelecionado[0].offsetLeft, height: vm.itemSelecionado[0].offsetHeight, width: vm.itemSelecionado[0].offsetWidth} |json}}
   button(ng-mousedown='vm.teste($event)') teste
