--- a/app/ngcWysiwyg/components/ngcWysiwygImageResizer/ngcWysiwygImageResizer.pug
+++ b/app/ngcWysiwyg/components/ngcWysiwygImageResizer/ngcWysiwygImageResizer.pug
@@ -1,4 +1,4 @@
-div.ngc-wysiwyg-handler.top-right
-div.ngc-wysiwyg-handler.top-left
-div.ngc-wysiwyg-handler.bottom-right
-div.ngc-wysiwyg-handler.bottom-left
+div.ngc-wysiwyg-handler.top-right(ng-mousedown='vm.ativarResize($event)')
+div.ngc-wysiwyg-handler.top-left(ng-mousedown='vm.ativarResize($event)')
+div.ngc-wysiwyg-handler.bottom-right(ng-mousedown='vm.ativarResize($event)')
+div.ngc-wysiwyg-handler.bottom-left(ng-mousedown='vm.ativarResize($event)')
