Corrigindo bug nos active dos botões, corrigindo float de imagem no IE

--- a/app/ngcWysiwyg/components/ngcWysiwyg/ngcWysiwyg.less
+++ b/app/ngcWysiwyg/components/ngcWysiwyg/ngcWysiwyg.less
@@ -35,6 +35,12 @@ ngc-wysiwyg {
                 padding-left: 5px;
                 color: cornflowerblue;
             }
+            .float-right{
+                float: right;
+            }
+            .float-left {
+                float: left;
+            }
         }
         img {
             &.align-left {
