--- a/app/ngcWysiwyg/components/ngcWysiwygImageResizer/ngcWysiwygImageResizer.pug
+++ b/app/ngcWysiwyg/components/ngcWysiwygImageResizer/ngcWysiwygImageResizer.pug
@@ -1,4 +1,8 @@
+div.ngc-wysiwyg-handler.top(md-colors="{'background': 'primary'}", ng-mousedown='vm.ativarResize($event, "top")')
 div.ngc-wysiwyg-handler.top-right(md-colors="{'background': 'primary'}", ng-mousedown='vm.ativarResize($event, "top-right")')
 div.ngc-wysiwyg-handler.top-left(md-colors="{'background': 'primary'}", ng-mousedown='vm.ativarResize($event, "top-left")')
+div.ngc-wysiwyg-handler.bottom(md-colors="{'background': 'primary'}", ng-mousedown='vm.ativarResize($event, "bottom")')
 div.ngc-wysiwyg-handler.bottom-right(md-colors="{'background': 'primary'}", ng-mousedown='vm.ativarResize($event, "bottom-right")')
 div.ngc-wysiwyg-handler.bottom-left(md-colors="{'background': 'primary'}", ng-mousedown='vm.ativarResize($event, "bottom-left")')
+div.ngc-wysiwyg-handler.left(md-colors="{'background': 'primary'}", ng-mousedown='vm.ativarResize($event, "left")')
+div.ngc-wysiwyg-handler.right(md-colors="{'background': 'primary'}", ng-mousedown='vm.ativarResize($event, "right")')
