Reestruturando gravacaoContinua, bold inline sem seleção

--- a/app/ngcWysiwyg/components/ngcWysiwyg/ngcWysiwyg.less
+++ b/app/ngcWysiwyg/components/ngcWysiwyg/ngcWysiwyg.less
@@ -27,6 +27,12 @@ ngc-wysiwyg {
         display: block;
         position: relative;
         div.content-editable {
+            &::after {
+                clear: both;
+                display: block;
+                content: "";
+                height: 0;
+            }
             &:focus {
                 outline: none;
             }
