--- a/app/ngcWysiwyg/components/ngcWysiwyg/ngcWysiwyg.pug
+++ b/app/ngcWysiwyg/components/ngcWysiwyg/ngcWysiwyg.pug
@@ -16,6 +16,5 @@ div.container(md-whiteframe='1')
     //- top  == img.offsetTop + (img.offsetHeight) + 8
     ngc-wysiwyg-floating-menu(md-colors="{'border-color': 'primary'}" ng-class='{"hidden" : !vm.itemSelecionado[0]}' ng-style='{top: vm.itemSelecionado[0].offsetTop + (vm.itemSelecionado[0].offsetHeight) + 8 , left: vm.itemSelecionado[0].offsetLeft + (vm.itemSelecionado[0].offsetWidth / 2) - (vm.floatingMenuCtrl.botoes.length * 30 / 2)}')
     ngc-wysiwyg-image-resizer(md-colors="{'border-color': 'primary'}" ng-class='{"hidden" : !vm.imagemSelecionada}' ng-style='{top: vm.itemSelecionado[0].offsetTop, left: vm.itemSelecionado[0].offsetLeft, height: vm.itemSelecionado[0].offsetHeight, width: vm.itemSelecionado[0].offsetWidth}')
-  md-button(ng-click='vm.teste()') teste
-  pre {{{top: vm.itemSelecionado[0].offsetTop, left: vm.itemSelecionado[0].offsetLeft, height: vm.itemSelecionado[0].offsetHeight, width: vm.itemSelecionado[0].offsetWidth} |json}}
-  button(ng-mousedown='vm.teste($event)') teste
+  md-button(ng-mousedown='vm.teste($event)') teste
+  //- pre {{{top: vm.itemSelecionado[0].offsetTop, left: vm.itemSelecionado[0].offsetLeft, height: vm.itemSelecionado[0].offsetHeight, width: vm.itemSelecionado[0].offsetWidth} |json}}
