--- a/app/ngcWysiwyg/components/ngcWysiwyg/ngcWysiwyg.less
+++ b/app/ngcWysiwyg/components/ngcWysiwyg/ngcWysiwyg.less
@@ -27,6 +27,7 @@ ngc-wysiwyg {
         display: block;
         position: relative;
         div.content-editable {
+            white-space: pre-wrap;
             &::after {
                 clear: both;
                 display: block;
